# OnlineLandlords

DDZ-Client/: CMakeLists.txt  main.cpp  res.qrc
DDZ-Client/card/: CMakeLists.txt  card.cpp  card.h  cards.cpp  cards.h
DDZ-Client/conf/: playList.json  style.qss
DDZ-Client/control/: CMakeLists.txt  bgmcontrol.cpp  bgmcontrol.h  datamanager.cpp  datamanager.h  gamecontrol.cpp  gamecontrol.h
DDZ-Client/crypto/: CMakeLists.txt  aescrypto.cpp  aescrypto.h  rsacrypto.cpp  rsacrypto.h
DDZ-Client/player/: CMakeLists.txt  player.cpp  player.h  robot.cpp  robot.h  userplayer.h
DDZ-Client/serialize/: CMakeLists.txt  Infomation.pb.cc  Infomation.proto  codec.h
DDZ-Client/strategy/: CMakeLists.txt  playhand.cpp  playhand.h  strategy.cpp  strategy.h
DDZ-Client/tcp/: CMakeLists.txt  tcpsocket.cpp  tcpsocket.h
DDZ-Client/thread/: CMakeLists.txt  communication.cpp  communication.h  robotgraplord.cpp  robotgraplord.h  robotplayhand.cpp  robotplayhand.h  taskqueue.cpp  taskqueue.h
DDZ-Client/windows/: CMakeLists.txt  animationwindow.cpp  animationwindow.h  buttongroup.h  cardpanel.h  countdown.h  endingpanel.cpp  endingpanel.h  gamemode.cpp  gamemode.h  gamemode.ui  gamepanel.cpp  gamepanel.h  gamepanel.ui  joinroom.cpp  joinroom.h  joinroom.ui  loading.cpp  loading.h  login.cpp  login.h  login.ui  mybutton.cpp  mybutton.h  scorepanel.cpp  scorepanel.h  scorepanel.ui
DDZ-Server/: CMakeLists.txt  main.cpp
DDZ-Server/common/: Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  JsonParse.cpp  JsonParse.h  Log.h
DDZ-Server/config/: config.json
DDZ-Server/crypto/: AesCrypto.h  Base64.h  CMakeLists.txt  Hash.h  RsaCrypto.h
DDZ-Server/database/: CMakeLists.txt  MySqlConn.h
DDZ-Server/game/: CMakeLists.txt  Communication.cpp  Communication.h  Room.cpp  Room.h  RoomList.cpp  RoomList.h
DDZ-Server/http/: CMakeLists.txt
DDZ-Server/reactor/: EventLoop.cpp  SelectDispatcher.cpp
DDZ-Server/serialize/: CMakeLists.txt  Codec.cpp  Codec.h  Infomation.pb.h
DDZ-Server/tcp/: TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
DDZ-Server/test/: CMakeLists.txt  MyTest.cpp  MyTest.h  person.pb.cc  person.pb.h  person.proto
DDZ-Server/thread/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
